<resources>
    <string name="app_name">MVVMExampleApp</string>
    <string name="save">Save</string>
    <string name="note_empty_title_exception">Title Cannot be Empty</string>
    <string name="note_title_hint">Title</string>
    <string name="note_body_hint">Body</string>
</resources>
