<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.exallium.mvvmexampleapp.presentation.notes.NoteEditViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_note_edit_title_input"
            app:errorEnabled="@{viewModel.titleErrorEnabled}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_note_edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note_title_hint"
                android:text="@{viewModel.title}"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_note_edit_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note_body_hint"
                android:text="@{viewModel.body}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</layout>